js/src/tests/test262/built-ins/Error/prototype/stack/getter-data-property-shadows.js



















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');
  Object.defineProperty(err, 'stack', {
    value: 'sentinel',
    writable: true,
    enumerable: true,
    configurable: true,
  });

  assert.sameValue(err.stack, 'sentinel', Ctor.name + ': own data property is returned by [[Get]]');

  
  
  assert.sameValue(typeof get.call(err), 'string', Ctor.name + ': inherited accessor still returns a string');
}

reportCompare(0, 0);
